<resources>
    <string name="app_name">7-MinWorkout</string>
    <string name="txt_start">START</string>
    <string name="start_image">Start Image</string>
    <string name="_7_min_workout">7-Min Workout</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="starting_your_exercise">Starting your exercise</string>
    <string name="exercise_name">ExerciseName</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE:</string>
    <string name="end">END</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_done_the_workout">You have done the workout!</string>
    <string name="finish">FINISH</string>
    <string name="image">Image</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="quit_alert">This will stop your workout. You\'ve come this far, are you sure you want to quit?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="bmi">BMI</string>
    <string name="calculate_bmi">CALCULATE BMI</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="calculate">CALCULATE</string>
    <string name="bmi_vsu">Very severely underweight</string>
    <string name="bmi_eatmore">Oops! You really need to take better care of yourself! Eat more!</string>
    <string name="bmi_su">Severely undeweight</string>
    <string name="bmi_uw">Underweight</string>
    <string name="bmi_n">Normal</string>
    <string name="bmi_congrats">Congratulations! You are in a good shape!</string>
    <string name="bmi_ow">Overweight</string>
    <string name="bmi_workout">Oops! You really need to take care of yourself! Workout Now!</string>
    <string name="bmi_actnow">OMG! You are in a very dangerous condition! Act now!</string>
    <string name="bmi_obese3">Obese Class III (Very Severely obese)</string>
    <string name="bmi_obese2">Obese Class II (Severely obese)</string>
    <string name="bmi_obese1">Obese Class I (Moderately obsese)</string>
</resources>