<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/are_you_sure"
        android:textColor="@color/secondary_color"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/quit_alert"
        android:textColor="@color/secondary_color"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        
        <Button
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/primary_color"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/primary_color"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>